--- a/FoodBlog.html
+++ b/FoodBlog.html
@@ -1,144 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <style>
-.topnav{
-position: absolute;
-width: 100%;
-height: 10%;
-left: 0px;
-top: 0px;
-background: #A6E4E7;
-}
-.home{
-position: relative;
-width: 200px;
-height: 5px;
-left: 5%;
-top: 7px;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 50px;
-line-height: 6px;
-
-color: #000000;
-}
-.recipe{
-position: absolute;
-width: 27px;
-height: 5px;
-left: 17%;
-top: 7px;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 50px;
-line-height: 6px;
-
-color: #000000;
-
-}
-.foodhub{
-position: absolute;
-width: 48px;
-height: 10px;
-left: 44%;
-top: 4px;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 50px;
-line-height: 12px;
-
-color: #000000;
-
-}
-.feedback{
-position: absolute;
-width: 27px;
-height: 5px;
-left: 70%;
-top: 7px;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 50px;
-line-height: 6px;
-
-color: #000000;
-}
-.about{
-position: absolute;
-width: 20px;
-height: 5px;
-left: 85%;
-top: 7px;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 50px;
-line-height: 6px;
-
-color: #000000;
-}
-
-@keyframes cf3FadeInOut {
-  0% {
-  opacity:1;
-}
-45% {
-opacity:1;
-}
-55% {
-opacity:0;
-}
-100% {
-opacity:0;
-}
-}
-
-#cf3 img.one {
-animation-name: cf3FadeInOut;
-animation-timing-function: ease-in-out;
-animation-iteration-count: infinite;
-animation-duration: 10s;
-animation-direction: alternate;
-}
-
-#cf3 img{
-    position:absolute;
-  left:0;
-  -webkit-transition: opacity 1s ease-in-out;
-  -moz-transition: opacity 1s ease-in-out;
-  -o-transition: opacity 1s ease-in-out;
-  transition: opacity 1s ease-in-out;
-}
-#cf3 img.transparent {
-opacity:0;
-}
-.mainImage{
-    width: 1000px;
-    height: 310px;
-    position: absolute;
-    transform: translate(-50%,-50%);
-    top: 30%;
-    left: 50%;
-    overflow:hidden;
-    border: 10px solid #ffffff;
-    border-radius: 8px;
-    box-shadow: -1px 5px 15px black;
-    border-image-width: 1000px;
-    
-}
-
-    </style>
+  
     <head>
-
+        <title>Food Blog</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <div class = "topnav">
