editing of directory in images

--- a/FoodBlog.html
+++ b/FoodBlog.html
@@ -3,7 +3,7 @@
   
     <head>
         <title>Food Blog</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
 
@@ -27,8 +27,8 @@
     <div class="mainImage">
             <div id="cf3">
            
-            <img class="three" src="Images/steak.jpg" width="100%" height="100%">
-            <img class="one" src="Images/vegetables.png" width="100%" height="100%">
+            <img class="three" src="steak.jpg" width="100%" height="100%">
+            <img class="one" src="vegetables.png" width="100%" height="100%">
         </div>
     </div>
        
@@ -43,7 +43,7 @@
         <table cellspacing="15">
             <tr>
               <td>
-                <img class="image" src="pics\Tapsilog.jpg" alt="Tapsilog">
+                <img class="image" src="Tapsilog.jpg" alt="Tapsilog">
               </td>
               <td>
                 <h3 class="name">Tapsilog</h3>
@@ -74,7 +74,7 @@
                   </p>   
                 </td>
                 <td>
-                  <img class="image" src="pics\Yeah.jpg" alt="ScrambledEggs">
+                  <img class="image" src="Yeah.jpg" alt="ScrambledEggs">
                 </td>
               </tr>
            </table>
@@ -86,7 +86,7 @@
           <table cellspacing="15">
               <tr>
                   <td>
-                    <img class="image" src="pics\bread.jpg" alt="ScrambledEggs">
+                    <img class="image" src="bread.jpg" alt="ScrambledEggs">
                   </td>
                   <td>
                     <h3 class="name">Double Baked Bacon + Egg Potatoes</h3>
@@ -115,7 +115,7 @@
   <table cellspacing="15">
       <tr>
         <td>
-          <img class="image" src="pics\Tapsilog.jpg" alt="Tapsilog">
+          <img class="image" src="Tapsilog.jpg" alt="Tapsilog">
         </td>
         <td>
           <h3 class="name">Tapsilog</h3>
@@ -146,7 +146,7 @@
             </p>   
           </td>
           <td>
-            <img class="image" src="pics\Yeah.jpg" alt="ScrambledEggs">
+            <img class="image" src="Yeah.jpg" alt="ScrambledEggs">
           </td>
         </tr>
      </table>
@@ -158,7 +158,7 @@
     <table cellspacing="15">
         <tr>
             <td>
-              <img class="image" src="pics\bread.jpg" alt="ScrambledEggs">
+              <img class="image" src="bread.jpg" alt="ScrambledEggs">
             </td>
             <td>
               <h3 class="name">Double Baked Bacon + Egg Potatoes</h3>
