animate food category

--- a/FoodBlog.html
+++ b/FoodBlog.html
@@ -39,26 +39,80 @@
 
 <div class="FoodCatPart-Row">
     <div class="column">
-      <img class="image" src="breakfastCat.jpg" alt="Breakfast Category">
+      <img class="imageMeal" src="breakfastCat.jpg" alt="Breakfast Category">
       <figcaption class="caption">Breakfast</figcaption>
     </div>
     <div class="column">
-      <img class="image" src="LunchCat.jpg" alt="Lunch Category">
-      <figcaption class="caption">Lunch</figcaption>
+      <img class="imageMeal" src="LunchCat.jpg" alt="Lunch Category">
+      <figcaption style="margin-left: 7%;" class="caption">Lunch</figcaption>
     </div>
     <div class="column">
-      <img class="image" src="DinnerCat.jpg" alt="Dinner Category">
-      <figcaption class="caption">Dinner</figcaption>
+      <img class="imageMeal" src="DinnerCat.jpg" alt="Dinner Category">
+      <figcaption style="margin-left: 7%;"  class="caption">Dinner</figcaption>
     </div>
     <div class="column">
-      <img class="image" src="DessertCat.jpg" alt="Dessert Category">
-      <figcaption class="caption">Dessert</figcaption>
+      <img class="imageMeal" src="DessertCat.jpg" alt="Dessert Category">
+      <figcaption style="margin-left: 7%;" class="caption">Dessert</figcaption>
     </div>
   </div>
 <!-----------------FOOD CATEGORY PART----------------->
 
 <!--- ERIKA'S PART  -->
-<H1>ERIKA'S PART. DITO ILALAGAY</H1>
+<H1><div class="gallery">
+  <a target="_blank" href="bulalo.jpg">
+    <img src="bulalo.jpg" alt="Food" width="600" height="400">
+  </a>
+  <div class="desc">Beef Bulalo</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="pinakbet.jpg">
+    <img src="pinakbet.jpg" alt="Food" width="600" height="400">
+  </a>
+  <div class="desc">Pinakbet</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="chicken-curry.jpg">
+    <img src="chicken-curry.jpg" alt="Food" width="600" height="400">
+  </a>
+  <div class="desc">Chicken Curry</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="sisig.jpg">
+    <img src="sisig.jpg" alt="Food" width="600" height="400">
+  </a>
+  <div class="desc">Pork Sisig</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="pork-sinigang-recipe.jpg">
+    <img src="pork-sinigang-recipe.jpg" alt="Food" width="600" height="400">
+  </a>
+  <div class="desc">Pork Sinigang</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="Pochero.jpg">
+    <img src="Pochero.jpg" alt="Food" width="600" height="400">
+  </a>
+  <div class="desc">Pochero</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="bicol-express-.jpg">
+    <img src="bicol-express-.jpg" alt="Food" width="600" height="400">
+  </a>
+  <div class="desc">Bicol Express</div>
+</div>
+
+<div class="gallery">
+    <a target="_blank" href="sharshadong isda.jpg">
+      <img src="sharshadong isda.jpg" alt="Food" width="600" height="400">
+    </a>
+    <div class="desc">Sharshadong Isda</div>
+  </div></H1>
 <!--- ERIKA'S PART  -->
 
 <!------------------- MEALS PART --------------------->
