Updated Title and Picture LUNCH PART
updated specific food for lunch input specific pictures

--- a/FoodBlog.html
+++ b/FoodBlog.html
@@ -267,10 +267,10 @@
      <table cellspacing="15">
          <tr>
            <td>
-             <img class="image" src="Tapsilog.jpg" alt="Tapsilog">
+            <img class="image" src="sisig.jpg" alt="Sisig">
            </td>
            <td>
-             <h3 class="name">Tapsilog</h3>
+             <h3 class="name">Sisig</h3>
              <p class="def">
                The term silog is a portmanteau of sinangag (fried rice) and <br> itlog (egg). 
                A silog meal, therefore, has at least these two elements present. <br> The third component is a type of meat – tapa being one of them.
@@ -286,7 +286,7 @@
        <table cellspacing="15">
            <tr>
              <td>
-               <h3 class="name">Scrambled Eggs</h3>
+               <h3 class="name">Pork Sinigang</h3>
                <p class="def">
                Scrambled Eggs are perfect for breakfast. They’re soft and creamy, <br> 
                rich and flavorful, and they just so happen to cook in under 5 minutes. <br>
@@ -296,7 +296,7 @@
                </p>   
              </td>
              <td>
-               <img class="image" src="Scrambled.jpg" alt="ScrambledEggs">
+               <img class="image" src="pork-sinigang-recipe.jpg" alt="pork-sinigang-recipe">
              </td>
            </tr>
         </table>
@@ -306,10 +306,10 @@
        <table cellspacing="15">
            <tr>
                <td>
-                 <img class="image" src="DoubleBaked.jpg" alt="ScrambledEggs">
+                 <img class="image" src="Pochero.jpg" alt="Pochero">
                </td>
                <td>
-                 <h3 class="name">Double Baked Bacon + Egg Potatoes</h3>
+                 <h3 class="name">Pochero</h3>
                  <p class="def">
                    For Super Creative and Clean Breakfast Idea, this will be amazing! <br>
                    Twice Baked Bacon & Egg Potatoes are also perfect for brunch. <br>
