--- a/FoodBlog.html
+++ b/FoodBlog.html
@@ -197,7 +197,77 @@
      <table cellspacing="15">
          <tr>
            <td>
-             <img class="image" src="Tapsilog.jpg" alt="Tapsilog">
+             <img class="image" src="pork-sinigang-recipe.jpg" alt="pork-sinigang-recipe">
+           </td>
+           <td>
+             <h3 class="name">Pork Sinigang</h3>
+             <p class="def">
+               The term silog is a portmanteau of sinangag (fried rice) and <br> itlog (egg). 
+               A silog meal, therefore, has at least these two elements present. <br> The third component is a type of meat – tapa being one of them.
+               In the Philippines, <br> tapa refers to dried cured beef. It’s soft and chewy, mostly savory and mildly sweet. 
+               <br> Together, this trifecta constitutes the most iconic and beloved Filipino breakfast – the tapsilog.
+             </p>
+             </td>
+         </tr>
+       </table>
+ </div>
+ 
+ <div style="float: right;" class="wew">
+       <table cellspacing="15">
+           <tr>
+             <td>
+               <h3 class="name">Pochero</h3>
+               <p class="def">
+               Scrambled Eggs are perfect for breakfast. They’re soft and creamy, <br> 
+               rich and flavorful, and they just so happen to cook in under 5 minutes. <br>
+               Making scrambled eggs isn’t complicated. 
+               A bit of salt and pepper for flavour, <br> a little butter to cook, and fresh eggs is 
+               all you need for a perfect breakfast.
+               </p>   
+             </td>
+             <td>
+               <img class="image" src="Pochero.jpg" alt="Pochero">
+             </td>
+           </tr>
+        </table>
+ </div>
+ 
+ <div style="float: left;" class="wew">
+       <table cellspacing="15">
+           <tr>
+               <td>
+                 <img class="image" src="sisig.jpg" alt="Sisig">
+               </td>
+               <td>
+                 <h3 class="name">Sisig</h3>
+                 <p class="def">
+                   For Super Creative and Clean Breakfast Idea, this will be amazing! <br>
+                   Twice Baked Bacon & Egg Potatoes are also perfect for brunch. <br>
+                   Baked potatoes oozing with delicious, creamy eggs and cheese are hard to <br>
+                   resist. In fact, baked potatoes are one of the few side dishes that are <br>
+                   too good to resist entirely.
+                 </p>
+             </td>
+           </tr>
+       </table>
+ </div>
+
+</div>
+
+<!-- LUNCH IDEAS-->
+
+<!-- DINNER IDEAS-->
+<div class="bahay">
+    <div class="title">
+       <h3 >Dinner Ideas</h3>
+    </div>
+   
+ 
+ <div style="float: left;" class="wew">
+     <table cellspacing="15">
+         <tr>
+           <td>
+            <img class="image" src="Tapsilog.jpg" alt="Tapsilog">
            </td>
            <td>
              <h3 class="name">Tapsilog</h3>
@@ -236,80 +306,10 @@
        <table cellspacing="15">
            <tr>
                <td>
-                 <img class="image" src="DoubleBaked.jpg" alt="ScrambledEggs">
+                 <<img class="image" src="DoubleBaked.jpg" alt="ScrambledEggs">
                </td>
                <td>
                  <h3 class="name">Double Baked Bacon + Egg Potatoes</h3>
-                 <p class="def">
-                   For Super Creative and Clean Breakfast Idea, this will be amazing! <br>
-                   Twice Baked Bacon & Egg Potatoes are also perfect for brunch. <br>
-                   Baked potatoes oozing with delicious, creamy eggs and cheese are hard to <br>
-                   resist. In fact, baked potatoes are one of the few side dishes that are <br>
-                   too good to resist entirely.
-                 </p>
-             </td>
-           </tr>
-       </table>
- </div>
-
-</div>
-
-<!-- LUNCH IDEAS-->
-
-<!-- DINNER IDEAS-->
-<div class="bahay">
-    <div class="title">
-       <h3 >Dinner Ideas</h3>
-    </div>
-   
- 
- <div style="float: left;" class="wew">
-     <table cellspacing="15">
-         <tr>
-           <td>
-            <img class="image" src="sisig.jpg" alt="Sisig">
-           </td>
-           <td>
-             <h3 class="name">Sisig</h3>
-             <p class="def">
-               The term silog is a portmanteau of sinangag (fried rice) and <br> itlog (egg). 
-               A silog meal, therefore, has at least these two elements present. <br> The third component is a type of meat – tapa being one of them.
-               In the Philippines, <br> tapa refers to dried cured beef. It’s soft and chewy, mostly savory and mildly sweet. 
-               <br> Together, this trifecta constitutes the most iconic and beloved Filipino breakfast – the tapsilog.
-             </p>
-             </td>
-         </tr>
-       </table>
- </div>
- 
- <div style="float: right;" class="wew">
-       <table cellspacing="15">
-           <tr>
-             <td>
-               <h3 class="name">Pork Sinigang</h3>
-               <p class="def">
-               Scrambled Eggs are perfect for breakfast. They’re soft and creamy, <br> 
-               rich and flavorful, and they just so happen to cook in under 5 minutes. <br>
-               Making scrambled eggs isn’t complicated. 
-               A bit of salt and pepper for flavour, <br> a little butter to cook, and fresh eggs is 
-               all you need for a perfect breakfast.
-               </p>   
-             </td>
-             <td>
-               <img class="image" src="pork-sinigang-recipe.jpg" alt="pork-sinigang-recipe">
-             </td>
-           </tr>
-        </table>
- </div>
- 
- <div style="float: left;" class="wew">
-       <table cellspacing="15">
-           <tr>
-               <td>
-                 <img class="image" src="Pochero.jpg" alt="Pochero">
-               </td>
-               <td>
-                 <h3 class="name">Pochero</h3>
                  <p class="def">
                    For Super Creative and Clean Breakfast Idea, this will be amazing! <br>
                    Twice Baked Bacon & Egg Potatoes are also perfect for brunch. <br>
