--- a/FoodBlog.html
+++ b/FoodBlog.html
@@ -202,10 +202,10 @@
            <td>
              <h3 class="name">Pork Sinigang</h3>
              <p class="def">
-               The term silog is a portmanteau of sinangag (fried rice) and <br> itlog (egg). 
-               A silog meal, therefore, has at least these two elements present. <br> The third component is a type of meat – tapa being one of them.
-               In the Philippines, <br> tapa refers to dried cured beef. It’s soft and chewy, mostly savory and mildly sweet. 
-               <br> Together, this trifecta constitutes the most iconic and beloved Filipino breakfast – the tapsilog.
+               Sinigang is a sour soup native to the Philippines. <br> 
+              This recipe uses pork as the main ingredient. Other proteins and seafood can also be used. Beef, shrimp, fish are commonly used to cook sinigang <br> 
+               In the Philippines, <br>  I prefer to use either pork belly or buto-buto when cooking sinigang. 
+               <br> The latter refers to cuts with bones intact. These are either pork neck bones, chopped spare ribs, and chopped baby back ribs. Pork shoulder and ham can also be used when cooking sinigang.
              </p>
              </td>
          </tr>
@@ -218,11 +218,9 @@
              <td>
                <h3 class="name">Pochero</h3>
                <p class="def">
-               Scrambled Eggs are perfect for breakfast. They’re soft and creamy, <br> 
-               rich and flavorful, and they just so happen to cook in under 5 minutes. <br>
-               Making scrambled eggs isn’t complicated. 
-               A bit of salt and pepper for flavour, <br> a little butter to cook, and fresh eggs is 
-               all you need for a perfect breakfast.
+              Beef Pochero is a Filipino Stew similar to that of “Beef Nilaga“. <br> 
+               This dish is complimented by the sweetness of the saba banana, and a unique sour blend is brought-in by the tomato sauce. <br>
+               A very enticing dish that is worth craving for beef pochero brings out the delightful taste of our Spanish influence. <br>
                </p>   
              </td>
              <td>
@@ -241,11 +239,11 @@
                <td>
                  <h3 class="name">Sisig</h3>
                  <p class="def">
-                   For Super Creative and Clean Breakfast Idea, this will be amazing! <br>
-                   Twice Baked Bacon & Egg Potatoes are also perfect for brunch. <br>
-                   Baked potatoes oozing with delicious, creamy eggs and cheese are hard to <br>
-                   resist. In fact, baked potatoes are one of the few side dishes that are <br>
-                   too good to resist entirely.
+                   Pork sisig is a popular Filipino dish <br>
+                   It can be considered as a main dish or an appetizer. <br>
+                   The composition of this dish is mainly of pig’s parts such as minced pork meat, ears, and face. <br>
+                  Chicken liver, onions, and chili peppers are also added. <br>
+                 
                  </p>
              </td>
            </tr>
