Updated Dinner Part
included captions and pictures for dinner

--- a/FoodBlog.html
+++ b/FoodBlog.html
@@ -265,15 +265,14 @@
      <table cellspacing="15">
          <tr>
            <td>
-            <img class="image" src="Tapsilog.jpg" alt="Tapsilog">
+            <img class="image" src="steak.jpg" alt="steak">
            </td>
            <td>
-             <h3 class="name">Tapsilog</h3>
+             <h3 class="name">Steak</h3>
              <p class="def">
-               The term silog is a portmanteau of sinangag (fried rice) and <br> itlog (egg). 
-               A silog meal, therefore, has at least these two elements present. <br> The third component is a type of meat – tapa being one of them.
-               In the Philippines, <br> tapa refers to dried cured beef. It’s soft and chewy, mostly savory and mildly sweet. 
-               <br> Together, this trifecta constitutes the most iconic and beloved Filipino breakfast – the tapsilog.
+               is a thick cut of meat generally sliced across the muscle fibers, sometimes including a bone. <br> itlog (egg). 
+              It is normally grilled or fried. Steak can be diced, cooked in sauce, <br> 
+              such as in steak and kidney pie, or minced and formed into patties, such as hamburgers. <br>
              </p>
              </td>
          </tr>
@@ -284,17 +283,15 @@
        <table cellspacing="15">
            <tr>
              <td>
-               <h3 class="name">Scrambled Eggs</h3>
+               <h3 class="name">Saciadong Isda</h3>
                <p class="def">
-               Scrambled Eggs are perfect for breakfast. They’re soft and creamy, <br> 
-               rich and flavorful, and they just so happen to cook in under 5 minutes. <br>
-               Making scrambled eggs isn’t complicated. 
-               A bit of salt and pepper for flavour, <br> a little butter to cook, and fresh eggs is 
-               all you need for a perfect breakfast.
+               Sarciadong Isda or Fish Sarciado translates to “Fish with sauce”. <br> 
+                Fried fish is simmered in a sauce that is usually composed <br>
+                of tomatoes and onions; some seasonings are also added to enhance the flavor. <br>
                </p>   
              </td>
              <td>
-               <img class="image" src="Scrambled.jpg" alt="ScrambledEggs">
+               <img class="image" src="sharshadong isda.jpg" alt="sharshadong">
              </td>
            </tr>
         </table>
@@ -304,16 +301,15 @@
        <table cellspacing="15">
            <tr>
                <td>
-                 <<img class="image" src="DoubleBaked.jpg" alt="ScrambledEggs">
+                 <img class="image" src="bicol-express-.jpg" alt="bicol-express">
                </td>
                <td>
-                 <h3 class="name">Double Baked Bacon + Egg Potatoes</h3>
+                 <h3 class="name">Bicol-Express</h3>
                  <p class="def">
-                   For Super Creative and Clean Breakfast Idea, this will be amazing! <br>
-                   Twice Baked Bacon & Egg Potatoes are also perfect for brunch. <br>
-                   Baked potatoes oozing with delicious, creamy eggs and cheese are hard to <br>
-                   resist. In fact, baked potatoes are one of the few side dishes that are <br>
-                   too good to resist entirely.
+                  The mild sweetness of coconut milk brings a sense of delight to the sharp <br>
+                  notes of chili pepper and bagoong in the classic Bicol Express recipe. <br>
+                  This contrast has long created a spell-binding richness in taste for the dish. <br>
+                  And this has helped make it arguably one of the most popular Filipino dishes. <br>
                  </p>
              </td>
            </tr>
