Updated Dessert part
included pictures and captions for each dessert

--- a/FoodBlog.html
+++ b/FoodBlog.html
@@ -330,15 +330,15 @@
      <table cellspacing="15">
          <tr>
            <td>
-             <img class="image" src="Tapsilog.jpg" alt="Tapsilog">
+             <img class="image" src="icecream.jpg" alt="icecream">
            </td>
            <td>
-             <h3 class="name">Tapsilog</h3>
+            <h3 class="name">icecream</h3>
              <p class="def">
-               The term silog is a portmanteau of sinangag (fried rice) and <br> itlog (egg). 
-               A silog meal, therefore, has at least these two elements present. <br> The third component is a type of meat – tapa being one of them.
-               In the Philippines, <br> tapa refers to dried cured beef. It’s soft and chewy, mostly savory and mildly sweet. 
-               <br> Together, this trifecta constitutes the most iconic and beloved Filipino breakfast – the tapsilog.
+                Ice cream is a mixture of milk, cream, sugar, and sometimes other ingredients <br> 
+              that has been frozen into a soft, creamy delight using special techniques. <br> 
+              Ice cream has been a popular treat for hundreds of years but has only become <br>
+                common place since the widespread use of refrigeration <br>
              </p>
              </td>
          </tr>
@@ -349,17 +349,16 @@
        <table cellspacing="15">
            <tr>
              <td>
-               <h3 class="name">Scrambled Eggs</h3>
+               <h3 class="name">Buko Pandan</h3>
                <p class="def">
-               Scrambled Eggs are perfect for breakfast. They’re soft and creamy, <br> 
-               rich and flavorful, and they just so happen to cook in under 5 minutes. <br>
-               Making scrambled eggs isn’t complicated. 
-               A bit of salt and pepper for flavour, <br> a little butter to cook, and fresh eggs is 
-               all you need for a perfect breakfast.
+               Buko Pandan is a popular Filipino Dessert made using young coconut, <br> 
+                pandan leaves or Screwpine leaves, and sago pearls. <br>
+                At first glance, this dessert dish can be mistaken for Buko Salad. <br> 
+                Both desserts are almost similar visually.
                </p>   
              </td>
              <td>
-               <img class="image" src="Scrambled.jpg" alt="ScrambledEggs">
+               <img class="image" src="buko pandan.jpg" alt="buko pandan">
              </td>
            </tr>
         </table>
@@ -369,16 +368,16 @@
        <table cellspacing="15">
            <tr>
                <td>
-                 <img class="image" src="DoubleBaked.jpg" alt="ScrambledEggs">
+                 <img class="image" src="Black Forest Cake.jpg" alt="Black Forest Cake">
                </td>
                <td>
-                 <h3 class="name">Double Baked Bacon + Egg Potatoes</h3>
+                <h3 class="name">Black Forest Cake</h3>
                  <p class="def">
-                   For Super Creative and Clean Breakfast Idea, this will be amazing! <br>
-                   Twice Baked Bacon & Egg Potatoes are also perfect for brunch. <br>
-                   Baked potatoes oozing with delicious, creamy eggs and cheese are hard to <br>
-                   resist. In fact, baked potatoes are one of the few side dishes that are <br>
-                   too good to resist entirely.
+                   Black Forest Cake combines rich chocolate cake layers <br>
+                  with fresh cherries, cherry liqueur, and a simple whipped cream frosting. <br>
+                  It looks fancier than it is, and the chocolate bark was actually dead easy to make. <br>
+                  trickiest part of this cake is making sure you don’t have any lingering cherry pits in your cherries, <br>
+                  which totally happened due to a less-than-stellar cherry pitter that broke after about 10 cherries. <br>
                  </p>
              </td>
            </tr>
