--- a/FoodBlog.html
+++ b/FoodBlog.html
@@ -36,83 +36,69 @@
 <!------------MAIN IMAGE WITH TAGLINE------------>
 
 <!-----------------FOOD CATEGORY PART----------------->
-
+<center> 
 <div class="FoodCatPart-Row">
-    <div class="column">
-      <img class="imageMeal" src="breakfastCat.jpg" alt="Breakfast Category">
-      <figcaption class="caption">Breakfast</figcaption>
-    </div>
-    <div class="column">
-      <img class="imageMeal" src="LunchCat.jpg" alt="Lunch Category">
-      <figcaption style="margin-left: 7%;" class="caption">Lunch</figcaption>
-    </div>
-    <div class="column">
-      <img class="imageMeal" src="DinnerCat.jpg" alt="Dinner Category">
-      <figcaption style="margin-left: 7%;"  class="caption">Dinner</figcaption>
-    </div>
-    <div class="column">
-      <img class="imageMeal" src="DessertCat.jpg" alt="Dessert Category">
-      <figcaption style="margin-left: 7%;" class="caption">Dessert</figcaption>
-    </div>
+  <div class="column">
+    <img class="image" src="breakfastCat.jpg" alt="Breakfast Category">
+    <figcaption class="caption">Breakfast</figcaption>
   </div>
+  <div class="column">
+    <img class="image" src="LunchCat.jpg" alt="Lunch Category">
+    <figcaption class="caption">Lunch</figcaption>
+  </div>
+  <div class="column">
+    <img class="image" src="DinnerCat.jpg" alt="Dinner Category">
+    <figcaption class="caption">Dinner</figcaption>
+  </div>
+  <div class="column">
+    <img class="image" src="DessertCat.jpg" alt="Dessert Category">
+    <figcaption class="caption">Dessert</figcaption>
+  </div>
+</div>
+</center>
 <!-----------------FOOD CATEGORY PART----------------->
 
 <!--- ERIKA'S PART  -->
-<H1><div class="gallery">
-  <a target="_blank" href="bulalo.jpg">
-    <img src="bulalo.jpg" alt="Food" width="600" height="400">
-  </a>
-  <div class="desc">Beef Bulalo</div>
+<center> 
+<div class="foodGal">
+  <div class="Galcolumn">
+    <img class="Galimage" src="bulalo.jpg" alt="Breakfast Category">
+    <figcaption class="Galcaption">Bulalo</figcaption>
+  </div>
+  <div class="Galcolumn">
+    <img class="Galimage" src="pinakbet.jpg" alt="Lunch Category">
+    <figcaption class="Galcaption">Pinakbet</figcaption>
+  </div>
+  <div class="Galcolumn">
+    <img class="Galimage" src="pork-sinigang-recipe.jpg" alt="Dinner Category">
+    <figcaption  class="Galcaption">Pork Sinigang</figcaption>
+  </div>
+  <div class="Galcolumn">
+    <img class="Galimage" src="Pochero.jpg" alt="Dessert Category">
+    <figcaption class="Galcaption">Pochero</figcaption>
+  </div>
+  <div class="Galcolumn">
+    <img class="Galimage" src="sharshadong isda.jpg" alt="Dessert Category">
+    <figcaption class="Galcaption">Sarciadong Isda</figcaption>
+  </div>
+  <div class="Galcolumn">
+    <img class="Galimage" src="sisig.jpg" alt="Dessert Category">
+    <figcaption class="Galcaption">Sisig</figcaption>
+  </div>
+  <div class="Galcolumn">
+    <img class="Galimage" src="bicol-express-.jpg" alt="Dessert Category">
+    <figcaption class="Galcaption">Bicol Express</figcaption>
+  </div>
+  <div class="Galcolumn">
+    <img class="Galimage" src="steak.jpg" alt="Dessert Category">
+    <figcaption class="Galcaption">Steak</figcaption>
+  </div>
+  <div class="Galcolumn">
+    <img class="Galimage" src="chicken-curry.jpg" alt="Dessert Category">
+    <figcaption class="Galcaption">Chicken Curry</figcaption>
+  </div>
 </div>
-
-<div class="gallery">
-  <a target="_blank" href="pinakbet.jpg">
-    <img src="pinakbet.jpg" alt="Food" width="600" height="400">
-  </a>
-  <div class="desc">Pinakbet</div>
-</div>
-
-<div class="gallery">
-  <a target="_blank" href="chicken-curry.jpg">
-    <img src="chicken-curry.jpg" alt="Food" width="600" height="400">
-  </a>
-  <div class="desc">Chicken Curry</div>
-</div>
-
-<div class="gallery">
-  <a target="_blank" href="sisig.jpg">
-    <img src="sisig.jpg" alt="Food" width="600" height="400">
-  </a>
-  <div class="desc">Pork Sisig</div>
-</div>
-
-<div class="gallery">
-  <a target="_blank" href="pork-sinigang-recipe.jpg">
-    <img src="pork-sinigang-recipe.jpg" alt="Food" width="600" height="400">
-  </a>
-  <div class="desc">Pork Sinigang</div>
-</div>
-
-<div class="gallery">
-  <a target="_blank" href="Pochero.jpg">
-    <img src="Pochero.jpg" alt="Food" width="600" height="400">
-  </a>
-  <div class="desc">Pochero</div>
-</div>
-
-<div class="gallery">
-  <a target="_blank" href="bicol-express-.jpg">
-    <img src="bicol-express-.jpg" alt="Food" width="600" height="400">
-  </a>
-  <div class="desc">Bicol Express</div>
-</div>
-
-<div class="gallery">
-    <a target="_blank" href="sharshadong isda.jpg">
-      <img src="sharshadong isda.jpg" alt="Food" width="600" height="400">
-    </a>
-    <div class="desc">Sharshadong Isda</div>
-  </div></H1>
+</center>
 <!--- ERIKA'S PART  -->
 
 <!------------------- MEALS PART --------------------->
@@ -203,9 +189,12 @@
              <h3 class="name">Pork Sinigang</h3>
              <p class="def">
                Sinigang is a sour soup native to the Philippines. <br> 
-              This recipe uses pork as the main ingredient. Other proteins and seafood can also be used. Beef, shrimp, fish are commonly used to cook sinigang <br> 
-               In the Philippines, <br>  I prefer to use either pork belly or buto-buto when cooking sinigang. 
-               <br> The latter refers to cuts with bones intact. These are either pork neck bones, chopped spare ribs, and chopped baby back ribs. Pork shoulder and ham can also be used when cooking sinigang.
+              This recipe uses pork as the main ingredient. Other proteins and <br>
+              seafood can also be used. Beef, shrimp, fish are commonly used to cook sinigang <br> 
+               In the Philippines, I prefer to use either pork belly or buto-buto <br> 
+               when cooking sinigang. The latter refers to cuts with bones intact. These are <br> 
+               either pork neck bones, chopped spare ribs, and chopped baby back ribs. Pork <br> 
+               shoulder and ham can also be used when cooking sinigang.<br> 
              </p>
              </td>
          </tr>
@@ -219,8 +208,9 @@
                <h3 class="name">Pochero</h3>
                <p class="def">
               Beef Pochero is a Filipino Stew similar to that of “Beef Nilaga“. <br> 
-               This dish is complimented by the sweetness of the saba banana, and a unique sour blend is brought-in by the tomato sauce. <br>
-               A very enticing dish that is worth craving for beef pochero brings out the delightful taste of our Spanish influence. <br>
+               This dish is complimented by the sweetness of the saba banana, and a unique <br>
+               sour blend is brought-in by the tomato sauce. A very enticing dish that is <br>
+               pochero brings out the delightful taste of our Spanish influence. 
                </p>   
              </td>
              <td>
@@ -283,7 +273,7 @@
        <table cellspacing="15">
            <tr>
              <td>
-               <h3 class="name">Saciadong Isda</h3>
+               <h3 class="name">Sarciadong Isda</h3>
                <p class="def">
                Sarciadong Isda or Fish Sarciado translates to “Fish with sauce”. <br> 
                 Fried fish is simmered in a sauce that is usually composed <br>
@@ -333,7 +323,7 @@
              <img class="image" src="icecream.jpg" alt="icecream">
            </td>
            <td>
-            <h3 class="name">icecream</h3>
+            <h3 class="name">Ice Cream</h3>
              <p class="def">
                 Ice cream is a mixture of milk, cream, sugar, and sometimes other ingredients <br> 
               that has been frozen into a soft, creamy delight using special techniques. <br> 
@@ -390,7 +380,7 @@
 <!--- MEALS PART END---- -->
 
 <!----------------FOOTER---------------->   
-<footer>
+<footer style="background-color: #E7AB9A; height: 200px; margin-top: 3%;">
     <div class="footer_container">
         <hr id="break">
         <div class="footer_list">
